# agent-skills

./: .gitignore  Makefile  README.md
instructions/: copilot-instructions.md
procedures/gh-ci-analyzer/: README.md  analyze  pyproject.toml
procedures/gh-ci-analyzer/analyzer/: cli.py  collector.py
prompts/: architecture-map.prompt.md  rephrase.prompt.md
scripts/gh-ci-analyzer/: README.md  gh-ci-analyze  pyproject.toml
scripts/gh-ci-analyzer/src/gh_ci_analyzer/: collector.py  gh.py  main.py  models.py
scripts/gh-ci-analyzer/templates/: analyze.prompt.md
scripts/gh-code-review/: ARCHITECTURE.md  README.md  gh-code-review  pyproject.toml
scripts/gh-code-review/src/gh_code_review/: context.py  diff.py  extractor.py  git.py  github.py  main.py
scripts/gh-code-review/src/gh_code_review/analyzers/: base.py  cpp.py  go.py  java.py  python.py
scripts/gh-code-review/templates/: agent-orchestrator.prompt.md  context.xml  diff-with-function-context.json  review.prompt.md
scripts/gh-code-review/tests/: test_e2e.py  test_extractor.py  test_git.py  test_github.py
scripts/gh-code-review/tests/analyzers/: test_base.py  test_cpp.py  test_go.py  test_java.py  test_python.py
skills/certyaml/: SKILL.md
skills/code-review/: SKILL.md
skills/contour/: SKILL.md
skills/contour-development/: SKILL.md
skills/contour-development/assets/: contour-deployment-patch.yaml  envoy-daemonset-patch.yaml
skills/contour-development/scripts/: create-cluster.sh
skills/contour-maintenance/: SKILL.md
skills/contour/assets/: contour-vscode-launch.json
skills/contour/scripts/: create-cluster.sh  delete-cluster.sh  prepare-for-contour-on-host.sh
skills/keycloak-admin-rest-api/: SKILL.md
skills/keycloak-development/: SKILL.md
skills/keycloak-development/scripts/: docker-compose-wrapper.sh
skills/keycloak-nordix-release/: SKILL.md
skills/pr-failure-analyzer/: SKILL.md
skills/pr-failure-analyzer/scripts/: analyze-pr-failures.sh
