[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "gh-code-review"
version = "0.1.0"
description = "Deterministic Code Review Assistant"
readme = "README.md"
authors = [
    { name = "Tero Saarni", email = "tero.saarni@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter>=0.25.2",
    "unidiff>=0.7.5",
]

[project.scripts]
gh-code-review = "gh_code_review.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
